Stylesheet/emote/tag updates 2015-09-30

--- a/minified-css/ponycountdown.css
+++ b/minified-css/ponycountdown.css
@@ -1,1 +1,1 @@
-a[href|="/countdown"]{display:block;clear:none;float:left;width:300px;height:60px;background-image:url("//b.thumbs.redditmedia.com/TctdB7NcmpUxkXD6gAzP-2z4udZndmc2tdrpIX3NBhE.png")}
+a[href|="/countdown"]{display:block;clear:none;float:left;width:300px;height:60px;background-image:url("//a.thumbs.redditmedia.com/rcvKPFMdeQ4r777zuE5HOFiQNQ-6H5J_cFypB7ywDT8.png")}
