--- a/source-css/flashsentry.css
+++ b/source-css/flashsentry.css
@@ -2,7 +2,7 @@
 
 div.titlebox span.word {display:none}
 div.titlebox .subscribers span.number:after {content:" band members"}
-div.titlebox .users-online span.number:after {content:" in a jam session"}
+div.titlebox .users-online span.number:after {content:" making welcome posters"}
 
 /* Background */
 
@@ -412,7 +412,7 @@ a[href|="/celestiamad"],a[href|="/rcelestiamad"],a[href|="/ajsly"],a[href|="/raj
   background-position:-100% -100%;
 }
 
-a[href|="/lunawait"],a[href|="/rlunawait"],a[href|="/raritydress"],a[href|="/rraritydress"],a[href|="/party"],a[href|="/rparty"],a[href|="/happyluna"],a[href|="/lunahappy"],a[href|="/rhappyluna"],a[href|="/rlunahappy"],.flair-celestia,.side .md table tr:nth-of-type(5) td:nth-of-type(2):after {
+a[href|="/lunawait"],a[href|="/rlunawait"],a[href|="/raritydress"],a[href|="/rraritydress"],a[href|="/party"],a[href|="/rparty"],a[href|="/happyluna"],a[href|="/lunahappy"],a[href|="/rhappyluna"],a[href|="/rlunahappy"],a[href|="/seriously"],a[href|="/flashseriously"],a[href|="/fsseriously"],.flair-celestia,.side .md table tr:nth-of-type(5) td:nth-of-type(2):after {
   background-position:-100% -200%;
 }
 
@@ -496,7 +496,7 @@ a[href|="/twicrazy"],a[href|="/rtwicrazy"],a[href|="/eeyup"],a[href|="/reeyup"],
   background-position:-200% -100%;
 }
 
-a[href|="/paperbagderpy"],a[href|="/paperbagwizard"],a[href|="/derpwizard"],a[href|="/rpaperbagderpy"],a[href|="/rpaperbagwizard"],a[href|="/rderpwizard"],a[href|="/takealetter"],a[href|="/rtakealetter"],a[href|="/hahaha"],a[href|="/rhahaha"],a[href|="/sotrue"],a[href|="/rsotrue"],.flair-derpy,.side .md table tr:nth-of-type(5) td:nth-of-type(3):after {
+a[href|="/paperbagderpy"],a[href|="/paperbagwizard"],a[href|="/derpwizard"],a[href|="/rpaperbagderpy"],a[href|="/rpaperbagwizard"],a[href|="/rderpwizard"],a[href|="/takealetter"],a[href|="/rtakealetter"],a[href|="/hahaha"],a[href|="/rhahaha"],a[href|="/sotrue"],a[href|="/rsotrue"],a[href|="/squintyflash"],a[href|="/squintyfs"],.flair-derpy,.side .md table tr:nth-of-type(5) td:nth-of-type(3):after {
   background-position:-200% -200%;
 }
 
@@ -780,7 +780,7 @@ END-PONYSCRIPT-IGNORE {color: red}
   text-align:center;
 }
 
-a[href|="/uncertainflash"],a[href|="/uncertainfs"],a[href|="/embarrassedflash"],a[href|="/embarrassedfs"],a[href|="/noproblem"],a[href|="/fsnoproblem"],a[href|="/fsdetermination"],a[href|="/waifustealer"],a[href|="/flashapproves"],a[href|="/fsapproves"],a[href|="/flashonduty"],a[href|="/flatteredflash"],a[href|="/flatteredfs"],a[href|="/proudflash"],a[href|="/proudfs"],a[href|="/cuteflash"],a[href|="/cutefs"],a[href|="/confusedflash"],a[href|="/confusedfs"],a[href|="/puzzledflash"] {
+a[href|="/uncertainflash"],a[href|="/uncertainfs"],a[href|="/embarrassedflash"],a[href|="/embarrassedfs"],a[href|="/noproblem"],a[href|="/fsnoproblem"],a[href|="/fsdetermination"],a[href|="/waifustealer"],a[href|="/flashapproves"],a[href|="/fsapproves"],a[href|="/flashonduty"],a[href|="/flatteredflash"],a[href|="/flatteredfs"],a[href|="/proudflash"],a[href|="/proudfs"],a[href|="/cuteflash"],a[href|="/cutefs"],a[href|="/confusedflash"],a[href|="/confusedfs"],a[href|="/puzzledflash"],a[href|="/seriously"],a[href|="/flashseriously"],a[href|="/fsseriously"],a[href|="/squintyflash"],a[href|="/squintyfs"] {
   display:block;
   clear:none;
   float:left;
