--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -999,7 +999,7 @@ a.author[href$="UserNameHere"]::before {font-size:10px!important; visibility:vis
 
 a.author[href$="Shercock_Holmes"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
 
-a.author[href$="Shercock_Holmes"]::before {font-size:10px!important; visibility:visible!important; content: "Johcock_Watson"}
+a.author[href$="Shercock_Holmes"]::before {font-size:10px!important; visibility:visible!important; content: "Shercock_Holmes"}
 
 .sidecontentbox a.author[href$="Pinkie_Pie"] {Display:none}
 
