--- a/source-css/sunsetshimmer.css
+++ b/source-css/sunsetshimmer.css
@@ -1793,7 +1793,7 @@ a.thumbnail.self{margin-right:-14px}
   font-weight: bold;
 }
 
-.side .md table:last-of-type td a:last-of-type { color: #0079D3 !important }
+.side .md table:last-of-type td a { color: #0079D3 !important }
 
 .content { margin-top: 58px }
 
