--- a/source-css/troubleshoes.css
+++ b/source-css/troubleshoes.css
@@ -584,7 +584,7 @@ a[href|="/spikemeh"],a[href|="/rdsmile"],a[href|="/changeling"],a[href|="/lunama
   background-position:-300% -100%;
 }
 
-a[href|="/abmeh"],a[href|="/rdwut"],a[href|="/rdscared"],a[href|="/discordsad"],.flair-vinyl,.side .md table tr:nth-of-type(5) td:nth-of-type(4):after {
+a[href|="/abmeh"],a[href|="/rdwut"],a[href|="/rdscared"],a[href|="/discordsad"],a[href|="/troubleshoeswince"],a[href|="/tscwince"],.flair-vinyl,.side .md table tr:nth-of-type(5) td:nth-of-type(4):after {
   background-position:-300% -200%;
 }
 
@@ -779,7 +779,7 @@ a[href^="/"][href*="-in-"], a[href^="/"][href$="-in"], a[href^="/"][href*="-inp-
   text-align:center;
 }
 
-a[href|="/troubleshoeshappy"],a[href|="/tschappy"],a[href|="/hauntedtroubleshoes"],a[href|="/hauntedtsc"],a[href|="/troubleshoessad"],a[href|="/tscsad"],a[href|="/troubleshoesmad"],a[href|="/tscmad"],a[href|="/troublecoltexcited"],a[href|="/tscexcited"],a[href|="/troublecoltdetermined"],a[href|="/tscdetermined"],a[href|="/troublecoltgasp"],a[href|="/tscgasp"],a[href|="/troublecoltmeh"],a[href|="/tscmeh"],a[href|="/troubleshoeseager"],a[href|="/tsceager"],a[href|="/troubleshoeseyeroll"],a[href|="/tsceyeroll"],a[href|="/troubleshoescheer"],a[href|="/tsccheer"],a[href|="/troublecoltsearch"],a[href|="/tscsearch"],a[href|="/troublecoltcute"],a[href|="/tsccute"] {
+a[href|="/troubleshoeshappy"],a[href|="/tschappy"],a[href|="/hauntedtroubleshoes"],a[href|="/hauntedtsc"],a[href|="/troubleshoessad"],a[href|="/tscsad"],a[href|="/troubleshoesmad"],a[href|="/tscmad"],a[href|="/troublecoltexcited"],a[href|="/tscexcited"],a[href|="/troublecoltdetermined"],a[href|="/tscdetermined"],a[href|="/troublecoltgasp"],a[href|="/tscgasp"],a[href|="/troublecoltmeh"],a[href|="/tscmeh"],a[href|="/troubleshoeseager"],a[href|="/tsceager"],a[href|="/troubleshoeseyeroll"],a[href|="/tsceyeroll"],a[href|="/troubleshoescheer"],a[href|="/tsccheer"],a[href|="/troublecoltsearch"],a[href|="/tscsearch"],a[href|="/troublecoltcute"],a[href|="/tsccute"],a[href|="/troubleshoeswince"],a[href|="/tscwince"] {
   display:block;
   clear:none;
   float:left;
