--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -133,8 +133,8 @@ transition: all 3s linear;
 
 /* CSS last generated on Sat, 16 Feb 2013 02:05:57 -0600 by UNKNOWN on derpy */
 div.titlebox span.word {display:none}
-div.titlebox .subscribers span.number:after {content:" Internal Monologues"}
-div.titlebox .users-online span.number:after {content:" Did I Just Say That Out Loud?"}
+div.titlebox .subscribers span.number:after {content:" Friendship Missions"}
+div.titlebox .users-online span.number:after {content:" Twilight has been on"}
 
 .sidecontentbox .flair {display:none}
 .sidebox .spacer {display:none}
@@ -267,19 +267,23 @@ border-top-right-radius: 5px;
  margin-top: 0px
 }
 
+/*Hat Settings*/
+
 .titlebox .usertext-body .md ol li strong{font-size:12px;color:#EF4F91}
 
 .titlebox .usertext-body .md ol li + li
 {
  display:inline-block;
  float:right;
- background:url(%%derpy-hat%%);
- width:60px;
- height:60px;
- margin-top:-35px;
+ background:url(%%amotes%%);
+ width:70px;
+ height:70px;
+ margin-top:-45px;
  margin-left:5px;
  margin-bottom:0px;
- margin-right:-40px;
+ margin-right:-45px;
+ background-position:-100% -400%; /*To select emote table position. Increments of -100%.*/
+ transform:scaleX(1); /*To reverse the hat. '1' is normal, '-1' is reversed.*/
 }
 
 .thumbnail:empty{background-image:url(%%thumbnails%%)!important}
@@ -1676,9 +1680,9 @@ div.content .linkflair-unverified .linkflairlabel:hover::after
 
 /*Spoiler-tag notification*/
 
-/*.post-submitter.post-under-10m-old .link:not(.over18) .marknsfw-button:before {
+.post-submitter.post-under-10m-old .link:not(.over18) .marknsfw-button:before {
     position: absolute;
-    content: "Is this about the new episode?  If so, please spoiler-tag it!";
+    content: "Is this about Friendship Games or Scare Master?  If so, please spoiler-tag it!";
     background: orangered;
     color: #ffffff;
     margin-top: 1.5em;
@@ -1725,7 +1729,7 @@ div.content .linkflair-unverified .linkflairlabel:hover::after
     margin-left: -2.2em;
     content: '';
     position: absolute;
-}*/
+}
 
 
 
