Stylesheet/emote/tag updates 2015-10-07

--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -59,9 +59,9 @@ background: url(%%horsewife%%) center center no-repeat transparent;
 /*Subscriber Name Replace*/
 div.titlebox span.word {display:none}
 
-div.titlebox .subscribers span.number:after {content:" spoiled Plizzards"}
+div.titlebox .subscribers span.number:after {content:" Long Lost Cousins"}
 div.titlebox .subscribers span.number:after {font-size:12px!important; }
-div.titlebox p.users-online span.number:after { content: " watching leaked episodes" }
+div.titlebox p.users-online span.number:after { content: " crossdressing" }
 div.titlebox p.users-online span.word { display: none }
 
 /*Flair modifications*/
@@ -72,12 +72,12 @@ div.titlebox p.users-online span.word { display: none }
 
 /*Remove RES stuff from sidebar*/
 .sidecontentbox .voteWeight,.sidecontentbox .userTagLink{display:none!important}
-
+submitted
 .md .RESUserTag, .md .RESUserTag + a.voteWeight,.md .RESUserTag + a.voteWeight + div.SuperRedditAltTextDisplay_Text{display:none!important;}
 .res-nightmode .tagline .flair{background-color:transparent!important}
 .res-nightmode .side .md h3{color:#DDD!important}
 .res-nightmode .side .titlebox .usertext-body .md h3{color:white!important}
-
+submitted
 /*Sidebar font modification*/
 .side .md h3{margin: 0; font-size: 1.25em}
 
