--- a/source-css/mylittledurian.css
+++ b/source-css/mylittledurian.css
@@ -136,9 +136,9 @@ a[href="/sbload"],a[href="/sbthrobber"],a[href="/sbbusy"] {
     Display: block;
     Clear: none;
     Float: left;
-    Width: 72px;
-    Height: 82px;
-    background-image: url(%%sbload%%) !important
+    Width: 71px;
+    Height: 81px;
+    background-image: url(%%sbload2%%) !important
 }
 
 a[href="/rdwut"] {
