--- a/source-css/sweetie_belle.css
+++ b/source-css/sweetie_belle.css
@@ -22,8 +22,8 @@ div.titlebox span.number:after {
 
 /*BACKGROUND*/ 
 body {
-    background: url(%%sbstare%%)  
-    no-repeat fixed center center
+    background: url(%%sbstaretrnsp%%)  
+    no-repeat fixed center center 
     }
 
 /*SUBMISSIONS*/
