--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -456,15 +456,15 @@ height: 800px;
  */
 
 /* 70x70a 'motes. */
-a[href|="/apathiasquint"], a[href|="/rdohyeah"], a[href|="/rainbowstache"], a[href|="/lemonglee"], a[href|="/grannyglad"], a[href|="/aloe"], a[href|="/ohyeah"], a[href|="/neutraljack"], a[href|="/fillyfirefly"], a[href|="/rdwat"], a[href|="/cocosmile"], a[href|="/cocohappy"], a[href|="/cocosad"], a[href|="/grimfluff"], a[href|="/ajduckface"], a[href|="/rarapossessed"], a[href|="/maudsmile"], a[href|="/dashsquint"], a[href|="/rastare"], a[href|="/rdfacehoof"], a[href|="/rdtwifacehoof"], a[href|="/rdtwipride"], a[href|="/rdtwismile"], a[href|="/rdtwicrazy"], a[href|="/rdtwibeam"], a[href|="/rdtwisquint"], a[href|="/rdtwistare"], a[href|="/rdtwiponder"], a[href|="/scootcontent"], a[href|="/twilightstare"], a[href|="/nursesaywhat"], a[href|="/twiworry"], a[href|="/apathiareally"], a[href|="/karmasmile"], a[href|="/discentiahurry"], a[href|="/karmacute"], a[href|="/discentiashock"], a[href|="/apathiashock"], a[href|="/karmahappy"], a[href|="/discentiaelated"], a[href|="/cadshrug"], a[href|="/fillysurprise"], a[href|="/rdbwaha"], a[href|="/lemonfire"], a[href|="/rarispikemeh"], a[href|="/rarispikenervous"], a[href|="/rarilouder"], a[href|="/rarirdannoyed"], a[href|="/rarirdcry"], a[href|="/rarirdsalute"], a[href|="/rarirdscared"], a[href|="/rarirdsitting"], a[href|="/twippseesyou"], a[href|="/twippjoy"], a[href|="/twihuhhuh"], a[href|="/twipinkieawe"], a[href|="/twipinkiepout"], a[href|="/twippfear"], a[href|="/pptwicrazy"], a[href|="/pptwisad"], a[href|="/pptwistare"], a[href|="/rarirdhappy"], a[href|="/rarirdwut"], a[href|="/lyraeww"], a[href|="/twidoubtit"], a[href|="/twisawthat"], a[href|="/twiscared"]
+a[href|="/apathiasquint"], a[href|="/rdohyeah"], a[href|="/rainbowstache"], a[href|="/lemonglee"], a[href|="/grannyglad"], a[href|="/aloe"], a[href|="/ohyeah"], a[href|="/neutraljack"], a[href|="/fillyfirefly"], a[href|="/rdwat"], a[href|="/cocohappy"], a[href|="/cocosad"], a[href|="/grimfluff"], a[href|="/ajduckface"], a[href|="/rarapossessed"], a[href|="/maudsmile"], a[href|="/dashsquint"], a[href|="/rastare"], a[href|="/rdfacehoof"], a[href|="/rdtwifacehoof"], a[href|="/rdtwipride"], a[href|="/rdtwismile"], a[href|="/rdtwicrazy"], a[href|="/rdtwibeam"], a[href|="/rdtwisquint"], a[href|="/rdtwistare"], a[href|="/rdtwiponder"], a[href|="/scootcontent"], a[href|="/twilightstare"], a[href|="/nursesaywhat"], a[href|="/twiworry"], a[href|="/apathiareally"], a[href|="/karmasmile"], a[href|="/discentiahurry"], a[href|="/karmacute"], a[href|="/discentiashock"], a[href|="/apathiashock"], a[href|="/karmahappy"], a[href|="/discentiaelated"], a[href|="/cadshrug"], a[href|="/fillysurprise"], a[href|="/rdbwaha"], a[href|="/lemonfire"], a[href|="/rarispikemeh"], a[href|="/rarispikenervous"], a[href|="/rarilouder"], a[href|="/rarirdannoyed"], a[href|="/rarirdcry"], a[href|="/rarirdsalute"], a[href|="/rarirdscared"], a[href|="/rarirdsitting"], a[href|="/twippseesyou"], a[href|="/twippjoy"], a[href|="/twihuhhuh"], a[href|="/twipinkieawe"], a[href|="/twipinkiepout"], a[href|="/twippfear"], a[href|="/pptwicrazy"], a[href|="/pptwisad"], a[href|="/pptwistare"], a[href|="/rarirdhappy"], a[href|="/rarirdwut"], a[href|="/lyraeww"], a[href|="/twidoubtit"], a[href|="/twisawthat"], a[href|="/twiscared"]
 {background-image:url(%%70x70a%%);width:70px;height:70px;display:block;float:left;}
 
 /* 70x70b 'motes */
-a[href|="/twithatsnice"], a[href|="/buysomeapples"], a[href|="/cadsoawesome"], a[href|="/cadancehey"], a[href|="/cadencehey"], a[href|="/twifascinating"], a[href|="/sunsetjoy"], a[href|="/karmahappy2"], a[href|="/karmagrin"], a[href|="/apathiablank"], a[href|="/apathiaconcern"], a[href|="/karmalook"], a[href|="/apathiaeyebrow"], a[href|="/discentiaangrysquint"], a[href|="/colgatebraces"], a[href|="/colgatenews"], a[href|="/colgatenotimpressed"], a[href|="/changelingshrug"], a[href|="/sunbreadshimmer"], a[href|="/sbeestare"], a[href|="/karmasquint"], a[href|="/dissquint"], a[href|="/discentiasquint"], a[href|="/trixiedafaq"], a[href|="/queensmeel"], a[href|="/queenglee"], a[href|="/pinkieainthavingthatshit"], a[href|="/ppyay"], a[href|="/snowdropmeh"], a[href|="/flutterheadtilt"], a[href|="/scratchhide"], a[href|="/octavia0"], a[href|="/braehay"], a[href|="/dashwant"], a[href|="/daringtired"], a[href|="/fs:I"], a[href|="/fsboop"], a[href|="/theresafourthwall"], a[href|="/ppaside"], a[href|="/ajstinkeye"], a[href|="/berrypinchwhat"], a[href|="/rubywhat"], a[href|="/octaviamanic"], a[href|="/rubylewd"], a[href|="/fsnotmad"], a[href|="/daringsmeel"], a[href|="/daringglee"], a[href|="/grinlestia"], a[href|="/daringblush"], a[href|="/whotf"], a[href|="/celestiafrown"], a[href|="/twidoubt"], a[href|="/ppdoubt"], a[href|="/raridoubt"], a[href|="/flutterdoubt"], a[href|="/dashdoubt"]
+a[href|="/twithatsnice"], a[href|="/buysomeapples"], a[href|="/cadsoawesome"], a[href|="/cadancehey"], a[href|="/cadencehey"], a[href|="/twifascinating"], a[href|="/sunsetjoy"], a[href|="/karmahappy2"], a[href|="/karmagrin"], a[href|="/apathiablank"], a[href|="/apathiaconcern"], a[href|="/karmalook"], a[href|="/apathiaeyebrow"], a[href|="/discentiaangrysquint"], a[href|="/colgatebraces"], a[href|="/colgatenews"], a[href|="/colgatenotimpressed"], a[href|="/changelingshrug"], a[href|="/sunbreadshimmer"], a[href|="/sbeestare"], a[href|="/karmasquint"], a[href|="/dissquint"], a[href|="/discentiasquint"], a[href|="/trixiedafaq"], a[href|="/queensmeel"], a[href|="/queenglee"], a[href|="/pinkieainthavingthatshit"], a[href|="/ppyay"], a[href|="/snowdropmeh"], a[href|="/flutterheadtilt"], a[href|="/scratchhide"], a[href|="/octavia0"], a[href|="/braehay"], a[href|="/dashwant"], a[href|="/daringtired"], a[href|="/fs:I"], a[href|="/fsboop"], a[href|="/theresafourthwall"], a[href|="/ppaside"], a[href|="/ajstinkeye"], a[href|="/berrypinchwhat"], a[href|="/rubywhat"], a[href|="/octaviamanic"], a[href|="/rubylewd"], a[href|="/fsnotmad"], a[href|="/daringsmeel"], a[href|="/daringglee"], a[href|="/grinlestia"], a[href|="/daringblush"], a[href|="/whotf"], a[href|="/celestiafrown"], a[href|="/twidoubt"], a[href|="/ppdoubt"], a[href|="/raridoubt"], a[href|="/flutterdoubt"], a[href|="/dashdoubt"], a[href|="/buzzlestia"], a[href|="/cloudkicker"], a[href|="/bigmacgrin"]
 {background-image:url(%%70x70b%%);width:70px;height:70px;display:block;float:left;}
 
 /* 100x100a 'motes. */
-a[href|="/cadface"], a[href|="/apathiablankstare"], a[href|="/twicider"], a[href|="/nomakeup"], a[href|="/twiscepter"], a[href|="/twisceptre"], a[href|="/winona"], a[href|="/lunahmm"], a[href|="/scootexcited"], a[href|="/fluttereyebrow"], a[href|="/smugcolgate"], a[href|="/trixielecture"], a[href|="/ajdur"], a[href|="/sadshy"], a[href|="/ajdoubt"], a[href|="/discoin"], a[href|="/deviousmac"], a[href|="/zerofucks"], a[href|="/pinkiestare"], a[href|="/shibetwi"], a[href|="/wowsocane"], a[href|="/shibelyra"], a[href|="/shibemena"], a[href|="/shibepie"], a[href|="/shibeluna"], a[href|="/shibederp"], a[href|="/shibeshy"], a[href|="/appleshibe"], a[href|="/shibedash"], a[href|="/rarishibe"]
+a[href|="/cadface"], a[href|="/apathiablankstare"], a[href|="/twicider"], a[href|="/nomakeup"], a[href|="/twiscepter"], a[href|="/twisceptre"], a[href|="/winona"], a[href|="/lunahmm"], a[href|="/scootexcited"], a[href|="/fluttereyebrow"], a[href|="/smugcolgate"], a[href|="/trixielecture"], a[href|="/ajdur"], a[href|="/sadshy"], a[href|="/discoin"], a[href|="/deviousmac"], a[href|="/zerofucks"], a[href|="/pinkiestare"], a[href|="/shibetwi"], a[href|="/wowsocane"], a[href|="/shibelyra"], a[href|="/shibemena"], a[href|="/shibepie"], a[href|="/shibeluna"], a[href|="/shibederp"], a[href|="/shibeshy"], a[href|="/appleshibe"], a[href|="/shibedash"], a[href|="/rarishibe"]
 {background-image:url(%%100x100a%%);width:100px;height:100px;display:block;float:left;}
 
 /* 100x100b 'motes */
@@ -472,7 +472,7 @@ a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/flutterfreaked"], a[
 {background-image:url(%%100x100b%%);width:100px;height:100px;display:block;float:left;}
 
 /* 100x100c 'motes */
-a[href|="/sadbot"], a[href|="/trixiecrazy"], a[href|="/wheredidthemuffingo"], a[href|="/dashthefuck"], a[href|="/cadsad"], a[href|="/sassybloom"], a[href|="/rdhello"], a[href|="/deeplyintriguedcadance"], a[href|="/vinylderp"], a[href|="/angryaj"], a[href|="/pearsteve"], a[href|="/riptreebrary"], a[href|="/ripgoldenoaks"], a[href|="/trixieawkward"], a[href|="/tgaptsundere"], a[href|="/princesslenny"], a[href|="/applebat2"], a[href|="/ididntlisten"], a[href|="/daringlicious"], a[href|="/daringcheeky"], a[href|="/discordmad"], a[href|="/g4smooze"], a[href|="/sadicecreamtwilight"], a[href|="/abswear"], a[href|="/tavilewd"], a[href|="/flaskhead"], a[href|="/lemonflask"], a[href|="/justdoit"], a[href|="/vinyllook"], a[href|="/horsewife"], a[href|="/browniebun"], a[href|="/sneakyhorsewife"], a[href|="/sneakybrownie"], a[href|="/echtron"]
+a[href|="/sadbot"], a[href|="/trixiecrazy"], a[href|="/wheredidthemuffingo"], a[href|="/dashthefuck"], a[href|="/cadsad"], a[href|="/sassybloom"], a[href|="/rdhello"], a[href|="/deeplyintriguedcadance"], a[href|="/vinylderp"], a[href|="/angryaj"], a[href|="/pearsteve"], a[href|="/riptreebrary"], a[href|="/ripgoldenoaks"], a[href|="/trixieawkward"], a[href|="/tgaptsundere"], a[href|="/princesslenny"], a[href|="/applebat2"], a[href|="/ididntlisten"], a[href|="/daringlicious"], a[href|="/daringcheeky"], a[href|="/discordmad"], a[href|="/g4smooze"], a[href|="/sadicecreamtwilight"], a[href|="/abswear"], a[href|="/tavilewd"], a[href|="/flaskhead"], a[href|="/lemonflask"], a[href|="/justdoit"], a[href|="/vinyllook"], a[href|="/horsewife"], a[href|="/browniebun"], a[href|="/sneakyhorsewife"], a[href|="/sneakybrownie"], a[href|="/echtron"], a[href|="/fonso"]
 {background-image:url(%%100x100c%%);width:100px;height:100px;display:block;float:left;}
 
 /* 150x150a 'motes. */
@@ -562,7 +562,7 @@ a[href|="/eqggaladash"], a[href|="/shininglick"], a[href|="/sblick"], a[href|="/
 
 /* Misfits m */
 
-a[href|="/jawdrop"], a[href|="/sbmagic"], a[href|="/fillydashie"], a[href|="/fswhatthehellisthat"], a[href|="/spikesawit"], a[href|="/cmcscream"], a[href|="/karmascrunch"], a[href|="/daringcute"], a[href|="/floofdash"], a[href|="/notenoughbloom"], a[href|="/treehugger"], a[href|="/seriousapathia"], a[href|="/scrunchgate"], a[href|="/rubyjuice"], a[href|="/pinkiecannon"], a[href|="/daringconcerned"], a[href|="/germandash"], a[href|="/rainbowdeutsch"]
+a[href|="/jawdrop"], a[href|="/sbmagic"], a[href|="/fillydashie"], a[href|="/fswhatthehellisthat"], a[href|="/spikesawit"], a[href|="/cmcscream"], a[href|="/karmascrunch"], a[href|="/daringcute"], a[href|="/floofdash"], a[href|="/notenoughbloom"], a[href|="/treehugger"], a[href|="/seriousapathia"], a[href|="/scrunchgate"], a[href|="/rubyjuice"], a[href|="/pinkiecannon"], a[href|="/daringconcerned"], a[href|="/germandash"], a[href|="/rainbowdeutsch"], a[href|="/cocoglee"]
 {background-image:url(%%misfitsm%%);display:block;float:left;}
 
 /*
@@ -610,7 +610,7 @@ a[href|="/whatatwist"],  a[href|="/hnng"], a[href|="/smugcolgate"], a[href|="/rd
 {background-position: 0% -300%;}
 
 /* Grid pos 1,3 'motes */
-a[href|="/rdsquishyface"], a[href|="/soveryawesome"], a[href|="/trixielecture"], a[href|="/cocosmile"], a[href|="/nerdderpy"], a[href|="/lunanurse"], a[href|="/maudxrock"], a[href|="/thisisbait"], a[href|="/flufflepirate"], a[href|="/karmalook"], a[href|="/riptreebrary"], a[href|="/ripgoldenoaks"], a[href|="/daringjoy"]
+a[href|="/rdsquishyface"], a[href|="/soveryawesome"], a[href|="/trixielecture"], a[href|="/nerdderpy"], a[href|="/lunanurse"], a[href|="/maudxrock"], a[href|="/thisisbait"], a[href|="/flufflepirate"], a[href|="/karmalook"], a[href|="/riptreebrary"], a[href|="/ripgoldenoaks"], a[href|="/daringjoy"]
 {background-position: -100% -300%;}
 
 /* Grid pos 2,3 'motes */
@@ -622,7 +622,7 @@ a[href|="/sombrarage"], a[href|="/sadshy"], a[href|="/cocosad"], a[href|="/nerdp
 {background-position: 0 -400%;}
 
 /* Grid pos 1,4 'motes */
-a[href|="/gildaconfused"], a[href|="/ajdoubt"], a[href|="/grimfluff"], a[href|="/nerdrarity"], a[href|="/lunapersona"], a[href|="/everythingisbait"], a[href|="/zecoradust"], a[href|="/colgatebraces"], a[href|="/princesslenny"]
+a[href|="/gildaconfused"], a[href|="/grimfluff"], a[href|="/nerdrarity"], a[href|="/lunapersona"], a[href|="/everythingisbait"], a[href|="/zecoradust"], a[href|="/colgatebraces"], a[href|="/princesslenny"]
 {background-position: -100% -400%;}
 
 /* Grid pos 2,4 'motes */
@@ -630,23 +630,23 @@ a[href|="/rarityspy"], a[href|="/discoin"], a[href|="/ajduckface"], a[href|="/ne
 {background-position: -200% -400%;}
 
 /* Grid pos 0,5 'motes */
-a[href|="/twilightyay"], a[href|="/twidoubt"], a[href|="/nerdtrixie"], a[href|="/rarapossessed"], a[href|="/rdscreaminginternally"], a[href|="/twilikethis"], a[href|="/incognitotwi"], a[href|="/changelingshrug"], a[href|="/ididntlisten"]
+a[href|="/twilightyay"], a[href|="/nerdtrixie"], a[href|="/rarapossessed"], a[href|="/rdscreaminginternally"], a[href|="/twilikethis"], a[href|="/incognitotwi"], a[href|="/changelingshrug"], a[href|="/ididntlisten"]
 {background-position: 0 -500%;}
 
 /* Grid pos 1,5 'motes */
-a[href|="/tiadisapproval"], a[href|="/ppdoubt"], a[href|="/nerdpie"], a[href|="/maudsmile"], a[href|="/twijoy"], a[href|="/celcrazy"], a[href|="/sovietsparkle"], a[href|="/sunbreadshimmer"], a[href|="/daringlicious"]
+a[href|="/tiadisapproval"], a[href|="/nerdpie"], a[href|="/maudsmile"], a[href|="/twijoy"], a[href|="/celcrazy"], a[href|="/sovietsparkle"], a[href|="/sunbreadshimmer"], a[href|="/daringlicious"]
 {background-position: -100% -500%;}
 
 /* Grid pos 2,5 'motes */
-a[href|="/raridoubt"], a[href|="/nerdtwi"], a[href|="/dashsquint"], a[href|="/seapeeve"], a[href|="/scootabloom"], a[href|="/batcadance"], a[href|="/sbeestare"], a[href|="/daringcheeky"]
+a[href|="/nerdtwi"], a[href|="/dashsquint"], a[href|="/seapeeve"], a[href|="/scootabloom"], a[href|="/batcadance"], a[href|="/sbeestare"], a[href|="/daringcheeky"]
 {background-position: -200% -500%;}
 
 /* Grid pos 0,6 'motes */
-a[href|="/flutterdoubt"], a[href|="/nerdlyra"], a[href|="/rastare"], a[href|="/loveletter"], a[href|="/abra"], a[href|="/batvinyl"], a[href|="/karmasquint"], a[href|="/discordmad"]
+a[href|="/nerdlyra"], a[href|="/rastare"], a[href|="/loveletter"], a[href|="/abra"], a[href|="/batvinyl"], a[href|="/karmasquint"], a[href|="/discordmad"]
 {background-position: 0 -600%;}
 
 /* Grid pos 1,6 'motes */
-a[href|="/dashdoubt"], a[href|="/humannerddash"], a[href|="/scootcontent"], a[href|="/twilightglare"], a[href|="/charizard"], a[href|="/christmaslyra"], a[href|="/dissquint"], a[href|="/discentiasquint"], a[href|="/g4smooze"]
+a[href|="/humannerddash"], a[href|="/scootcontent"], a[href|="/twilightglare"], a[href|="/charizard"], a[href|="/christmaslyra"], a[href|="/dissquint"], a[href|="/discentiasquint"], a[href|="/g4smooze"]
 {background-position: -100% -600%;}
 
 /* Grid pos 2,6 'motes */
@@ -686,7 +686,7 @@ a[href|="/shibeluna"], a[href|="/twilightstare"], a[href|="/raraglee"], a[href|=
 {background-position: -100% -900%;}
 
 /* Grid pos 2,9 'motes */
-a[href|="/shibederp"], a[href|="/nursesaywhat"], a[href|="/fillyderpysit"], a[href|="/braehay"]
+a[href|="/shibederp"], a[href|="/nursesaywhat"], a[href|="/fillyderpysit"], a[href|="/braehay"], a[href|="/fonso"]
 {background-position: -200% -900%;}
 
 /* Grid pos 0,10 'motes */
@@ -770,15 +770,15 @@ a[href|="/rarirdscared"], a[href|="/dashdoubt"]
 {background-position: -100% -1600%;}
 
 /* Grid pos 2,16 'motes */
-a[href|="/rarirdsitting"]
+a[href|="/rarirdsitting"], a[href|="/buzzlestia"]
 {background-position: -200% -1600%;}
 
 /* Grid pos 0,17 'motes */
-a[href|="/twippseesyou"]
+a[href|="/twippseesyou"], a[href|="/cloudkicker"]
 {background-position: 0 -1700%;}
 
 /* Grid pos 1,17 'motes */
-a[href|="/twippjoy"]
+a[href|="/twippjoy"], a[href|="/bigmacgrin"]
 {background-position: -100% -1700%;}
 
 /* Grid pos 2,17 'motes */
@@ -1280,3 +1280,4 @@ a[href|="/rubyjuice"] {width:57px;height:100px;background-position: 0 -570px;}
 a[href|="/pinkiecannon"] {width:127px;height:200px;background-position: -457px 0;}
 a[href|="/daringconcerned"] {width:80px;height:150px;background-position: -75px -525px;}
 a[href|="/germandash"], a[href|="/rainbowdeutsch"] {width:124px;height:150px;background-position: -456px -200px;}
+a[href|="/cocoglee"] {width:83px;height:150px;background-position: -584px 0;}
